# rust-ai-toolkit

./: .env.example  .gitignore  Cargo.toml  OPTIMIZATIONS.md  README.md
docs/: API_PROVIDERS.md  TEMPLATES.md  TROUBLESHOOTING.md  USAGE.md
examples/: Cargo.toml  README.md  basic_usage.rs  custom_ai_client.rs  custom_template.rs  rate_limit_handling.rs  streaming_responses.rs
src/: error.rs  lib.rs  main.rs
src/ai/: anthropic.rs  anthropic_enhanced.rs  cache.rs  mod.rs  openai.rs
src/config/: mod.rs
src/models/: mod.rs
src/prompts/: mod.rs
src/stages/: init.rs  mod.rs  stage1.rs  stage2.rs  stage3.rs  stage4.rs  stage5.rs  stage6.rs
src/utils/: cache.rs  file.rs  mod.rs  project.rs  rate_limiter.rs  ui.rs
templates/: stage1.hbs  stage2.hbs  stage3.hbs  stage4.hbs  stage5.hbs  stage6.hbs
tests/common/: mod.rs
tests/integration/: cache_test.rs  config_test.rs  mod.rs
