[package]
name = "rust-ai-toolkit"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A toolkit for automating staged approach to project planning with AI"

[workspace]
members = [".", "examples"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full", "fs"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
dirs = "5.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
colored = "2.0"
dialoguer = "0.11"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4.0"
once_cell = "1.18.0"
futures = "0.3"
lazy_static = "1.4"
tokio-stream = "0.1"
handlebars = "4.3"
glob = "0.3"
rand = "0.8"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
tempfile = "3.8"
serde_test = "1.0"
test-log = { version = "0.2", features = ["trace"] }
env_logger = "0.10"  # Required by test-log
tracing = "0.1"      # Required by test-log
tracing-subscriber = "0.3"  # Required by test-log

[features]
# Define test features here if needed
test-utils = []  # Enable test utilities in main code
